[26107] Fix alignment of type/status top row
[ci skip]

--- a/app/assets/stylesheets/content/work_packages/new/_type_status_row.sass
+++ b/app/assets/stylesheets/content/work_packages/new/_type_status_row.sass
@@ -11,6 +11,10 @@
   #wp-new-inline-edit--field-type
     margin-left: 5px
 
+  // Fix display left padding of tpye
+  .wp-edit-field--display-field
+    padding-left: 0 !important
+
   // Disable text decoration from toolbar span
   .wp-edit-field--display-field:hover
     text-decoration: none
