--- a/app/assets/stylesheets/layout/_work_packages_full_view.sass
+++ b/app/assets/stylesheets/layout/_work_packages_full_view.sass
@@ -255,6 +255,10 @@ body.controller-work_packages.full-create
   .wp-table--cell-span
     padding-right: 5px !important
 
+  // Remove left padding from type
+  .wp-edit-field--display-field
+    padding-left: 0 !important
+
   @media only screen and (min-width: 679px)
     .wp-edit-field--container.-active
       margin-right: 80px !important
